--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <html>
-  <head>
-    <title>React Parcel Micro App</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script src="./src/index.js"></script>
-  </body>
+
+<head>
+  <title>Constellation Assignment</title>
+  <link href="https://fonts.googleapis.com/css?family=Alata|Roboto&display=swap" rel="stylesheet">  
+</head>
+
+<body>
+  <div id="root"></div>
+  <script src="./src/index.js"></script>
+</body>
+
 </html>
